# cml2-mcp

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  justfile  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml
src/cml2_mcp/: server.py
