[project]
name = "cml2-mcp"
version = "0.1.1"
description = "Thin MCP server for Cisco CML2: openapi.json + generic authenticated REST."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yuya Kusakabe", email = "yuya.kusakabe@gmail.com" }]
keywords = ["mcp", "cml2", "cisco", "modeling-labs", "network-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/higebu/cml2-mcp"
Repository = "https://github.com/higebu/cml2-mcp"
Issues = "https://github.com/higebu/cml2-mcp/issues"

[project.scripts]
cml2-mcp = "cml2_mcp.server:main"

[dependency-groups]
dev = ["ruff>=0.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cml2_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W", "B", "SIM"]

